--- a/app/src/main/resources/application-docker.properties
+++ b/app/src/main/resources/application-docker.properties
@@ -18,3 +18,6 @@ spring.datasource.password=pokedex_user_password
 # spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.suffix=.html
