remove unused deps

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,23 +1,23 @@
-
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
+spring.thymeleaf.cache=false
+spring.thymeleaf.suffix=.html
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.initialization-mode=always
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/pokedex_db
-spring.datasource.username=pokedex_user
-spring.datasource.password=pokedex_user_password
+#spring.datasource.initialization-mode=always
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/pokedex_db
+#spring.datasource.username=pokedex_user
+#spring.datasource.password=pokedex_user_password
 
 
 # Log JPA queries
 # Comment this in production
 # spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.thymeleaf.cache=false
-spring.thymeleaf.suffix=.html
+
